@@ -8,8 +8,8 @@ supported for each game.
 Action   1 2 3 4 5 6 7 75 8 9 95 10 103 105 11 12 123 125 128 13 14 143 15 16 165 17 18 185 19
 thanm x  - - - - - - y  - y y  y  y   y  -  y  y   -   y   y  y  y   y  y  y   y  y  y  y   y
 thanm l  - - - - - y y  - y y  y  y   y  -  y  y   -   y   y  y  y   y  y  y   y  y  y  y   y
-thdat x  y y y y y y y  n y y  y  y   y  y  y  y   y   y   y  y  y   y  y  y   y  y  y  y   y
-thdat c  y y y y y y y  n y y  y  y   y  y  y  y   y   y   y  y  y   y  y  y   y  y  y  y   y
+thdat x  y y y y y y y  y y y  y  y   y  y  y  y   y   y   y  y  y   y  y  y   y  y  y  y   y
+thdat c  y y y y y y y  y y y  y  y   y  y  y  y   y   y   y  y  y   y  y  y   y  y  y  y   y
 thecl d  - - - - - y y  - y y  y  y   y  -  y  y   -   y   y  y  y   y  y  y   y  y  y  y   y
 thecl c  - - - - - y y  - y y  y  y   y  -  y  y   -   y   y  y  y   y  y  y   y  y  y  y   y
 thmsg d  - - - - - y y  - y y  y  y   -  -  y  y   -   y   y  y  y   y  y  y   y  y  y  y   y
